--- a/brilliant/tax.html
+++ b/brilliant/tax.html
@@ -331,7 +331,134 @@
             </div>
         </div>
     </footer><!--/#footer-->
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Services</h4>
+            </div>
+            <div class="modal-body">
+                    <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#ser_typing">
+                    Typing
+                </button>
+                <br>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#ser_tours">
+                    Tours & Travels
+                </button>
+                <br>
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#ser_event">
+                    Event Management
+                </button>
+            </div>
+        </div>
+        </div>
+    </div>
+    <div class="modal fade" id="ser_typing" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i style="color: red;" class="fa fa-chevron-circle-left" aria-hidden="true"></i></button>
+              <h4 class="modal-title" id="myModalLabel">Typing Services</h4>
+            </div>
+            <div class="modal-body">
+                <ul class="list-unstyled">
+                    <li><a href="tasheel.html">Tas-heel services</a></li>
+                    <li><a href="emirates.html">Emirates ID</a></li>
+                    <li><a href="legalservices.html">Legal sesrvices</a></li>
+                    <li><a href="echannel.html">Online E-channel</a></li>
+                    <li><a href="consultation.html">Consultation</a></li>
+                    <li><a href="licensing.html">Business Licensing</a></li>
+                    <li><a href="vat.html">Vat Consultancy</a></li>
+                    <li><a href="visa.html">Visa Services</a></li>
+                    <li><a href="attestation.html">Attestation Services</a></li>
+                    <li><a href="pwrofatt.html">Power Of Anttorney</a></li>
+                    <li><a href="tradelicense.html">Trade License</a></li>
+                    <li><a href="proservices.html">PRO Services</a></li>
+                    <li><a href="businessman.html">Businessman services</a></li>
+                    <li><a href="insurance.html">Insurance</a></li>
+                    <li><a href="translation.html">Transnlation Services</a></li>
+                </ul>
+            </div>
 
+          </div>
+        </div>
+    </div>
+    <div class="modal fade" id="ser_tours" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i style="color: red;" class="fa fa-chevron-circle-left" aria-hidden="true"></i></button>
+              <h4 class="modal-title" id="myModalLabel">Tours & Travels</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <h3>Packages</h3>
+                            <a href="01_azerbaijan.html">Azerbaijan</a>
+                            <a href="02_jordan.html">Jordan</a><br>
+                            <a href="03_Kyrgyzstan.html">Kyrgyzstan</a><br>
+                            <a href="04_georgia.html">Georgia</a><br>
+                            <a href="05_turkey.html">Turkey</a><br>
+                            <a href="06_armenia.html">Armenia</a><br>
+                            <a href="07_nepal.html">Nepal</a><br>
+                            <a href="08_bangkok.html">Bangkok</a><br>
+                    </div>
+                    <div class="col-xs-6">
+                        <h3>Activities</h3>
+                        <a href="09_warnerbros.html">Warnerbros</a><br>
+                        <a href="10_emiratespark.html">Emirates Zoo</a><br>
+                        <a href="11_skydiving.html">Skydiving</a><br>
+                        <a href="12_ferrariworld.html">Ferrariworld</a><br>
+                        <a href="13_nationalaquarium.html">National Aquarium</a><br>
+                        <a href="14_qasralwatan.html">Qasr Al Watan</a><br>
+                        <a href="15_burjkhalifa.html">Burj Khalifa</a><br>
+                        <a href="16_fulldayabudhabi.html">Fullday Abu Dhabi</a><br>
+                        <a href="17_hattamountain.html">Hatta Mountain</a><br>
+                        <a href="18_fulldayhatta.html">Fullday Hatta</a><br>
+                        <a href="19_eastcoast.html">East Coast</a><br>
+                        <a href="20_musandam.html">Musandam</a><br>
+                        <a href="21_deiracreek.html">Deira Creek Cruise</a><br>
+                        <a href="22_marinacruise.html">Marina Cruise</a><br>
+                        <a href="23_desertsafari.html">Desert Safari</a><br>
+                    </div>
+                </div>
+                
+                    
+            </div>
+
+          </div>
+        </div>
+    </div>
+    <div class="modal fade" id="ser_event" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i style="color: red;" class="fa fa-chevron-circle-left" aria-hidden="true"></i></button>
+              <h4 class="modal-title" id="myModalLabel">Event Management</h4>
+            </div>
+            <div class="modal-body">
+                <ul class="list-unstyled">
+                    <li><a href="01_artsmusical.html">Arts & Musical</a></li>
+                    <li><a href="02_birthday.html">Birthday Party</a></li>
+                    <li><a href="03_corporate.html">Corporate Event</a></li>
+                    <li><a href="04_entertainment.html">Entertainment</a></li>
+                    <li><a href="05_fashionshow.html">Fashon Shows</a></li>
+                    <li><a href="06_filming.html">Event Filming</a></li>
+                    <li><a href="07_folklore.html">Folklore Dance</a></li>
+                    <li><a href="08_hospitality.html">Hospitality Services</a></li>
+                    <li><a href="09_musicalband.html">Musical Band</a></li>
+                    <li><a href="10_recreational.html">Recreational Services</a></li>
+                    <li><a href="11_wedding.html">Wedding Party</a></li>
+                </ul>
+            </div>
+
+          </div>
+        </div>
+    </div>
+    <!-- /Modals -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
