--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
 					<h1>I'm<strong> Web Dev</strong>, a <strong>content creator</strong>, <br>
-					a <strong>musician </strong>& novice <strong>Graphic designer</strong>.</h1>
+					a <strong>musician </strong>& <br> novice <strong>Graphic designer</strong>.</h1>
 				</div>
 			</header>
 
