--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a>
-					<h1>I'm<strong> Web Dev</strong>, a <strong>content creator</strong>, <br>
-					a <strong>musician </strong>& <br> novice <strong>Graphic designer</strong>.</h1>
+					<h4>I'm a
+					<ul style="list-style-type:none">
+						<li><strong> Web Dev</strong></li>
+						<li><strong> content creator</strong></li>
+						<li><strong> musician </strong></li>
+						<li> novice <strong>Graphic designer</strong></li>
+					</ul>
+					</h4>
+					
 				</div>
 			</header>
 
