--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h4>I'm a
 					
 						Web Dev,
-						content creator,
+						content creator, <br>
 						musician &
 						novice Graphic designer
 				
